@@ -17,6 +17,7 @@ Benedykt Kroplewski <benedykt@age.pl>
 Aymerick Jehanne    <aymerick@jehanne.org>
 Ossi Jormakka       (Ixonos Plc., ActiveSync)
 Jeremy Lainé        (helped with cmake on Win32)
+Petr Písař          (RedHat/Fedora package maintainer)
 Boaz Yaniv          (MS Visual Studio fixes)
 
 If you think your name is missing here
